// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Constructor component (integration with AsyncAPI document) renders with neither serverUrl nor query 1`] = `
"def __init__(self, url: str = \\"null\\"):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
      
        self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []


        
        self.url = url"
`;

exports[`Constructor component (integration with AsyncAPI document) renders with only serverUrl (withHostDuplicatingProtocol) 1`] = `
"def __init__(self, url: str = \\"wss://test.example.com\\"):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
      
        self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []


        
        self.url = url"
`;

exports[`Constructor component (integration with AsyncAPI document) renders with serverUrl and query parameters 1`] = `
"def __init__(self, url: str = \\"wss://test.example.com/ws/{symbol}\\", heartbeat: str = \\"false\\", bids: str = \\"true\\", sessionId: str = None):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
 heartbeat (str, optional):If provided (or if HEARTBEAT environment variable is set), added as ?heartbeat=… to URL
 bids (str, optional):If provided (or if BIDS environment variable is set), added as ?bids=… to URL
 sessionId (str, optional):If provided (or if SESSIONID environment variable is set), added as ?sessionId=… to URL
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
        params = {}
        self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []

        heartbeat = heartbeat or os.getenv(\\"HEARTBEAT\\")
        if heartbeat is not None:
          params[\\"heartbeat\\"] = heartbeat
        bids = bids or os.getenv(\\"BIDS\\")
        if bids is not None:
          params[\\"bids\\"] = bids
        sessionId = sessionId or os.getenv(\\"SESSIONID\\")
        if sessionId is not None:
          params[\\"sessionId\\"] = sessionId

        qs = urlencode(params) if params else \\"\\"
        self.url = f\\"{url}{f'?{qs}' if qs else ''}\\""
`;

exports[`Constructor component (integration with AsyncAPI document) renders with undefined query 1`] = `
"def __init__(self, url: str = \\"wss://test.example.com/ws/{symbol}\\"):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
      
        self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []


        
        self.url = url"
`;
